--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "db.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "node db.js"
+    "start": "node db.js"
   },
   "repository": {
     "type": "git",
